--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <p>Passionate about building innovative software solutions and solving complex problems.</p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
-                    <a href="https://drive.google.com/file/d/1fKHDD2WLmfAZBMIK39BZXjZxc7MYT8wG/view" target="_blank" class="btn secondary">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1KnJ52CGF5szxNgfC-EQHyQ0_hcdl5yP3/view?usp=sharing" target="_blank" class="btn secondary">Download Resume</a>
                     </div>
-                </div>
+            </div>
         </div>
     </section>
 
@@ -58,6 +58,7 @@
                             <h4>Indian Institute of Information Technology, Bhopal</h4>
                             <p>Bachelor of Technology - Information Technology</p>
                             <p>November 2022 - May 2026</p>
+                            <p>CGPA: 8.01</p>
                         </div>
                         <div class="education-item">
                             <h4>Gyan Ganga International Academy</h4>
@@ -100,7 +101,7 @@
                         <h3>Developer Tools</h3>
                         <div class="skills-grid">
                             <div class="skill-item"><img src="Github.png" alt="Github"><p>Github</p></div>
-                            <div class="skill-item"><img src="Git.png" alt="Git"><p>Github</p></div> <div class="skill-item"><img src="Xcode.png" alt="Xcode"><p>Xcode</p></div>
+                            <div class="skill-item"><img src="Git.png" alt="Git"><p>Git</p></div> <div class="skill-item"><img src="Xcode.png" alt="Xcode"><p>Xcode</p></div>
                             <div class="skill-item"><img src="Studio.png" alt="Android Studio"><p>Android Studio</p></div>
                             <div class="skill-item"><img src="Vscode.png" alt="VSCode"><p>VSCode</p></div>
                             <div class="skill-item"><i class="fas fa-file-alt"></i><p>MS Office Suite</p></div> </div>
@@ -192,7 +193,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>ObjectInsight App Consistent Spacing</Consistency>
+                        <h3>ObjectInsight App Consistent Spacing</h3>
                         <div class="project-links">
                             <a href="https://github.com/ankit7610/ObjectInsight" target="_blank" class="github-link">
                                 <i class="fab fa-github"></i>
