--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </section>
 
-    <section id="experience" class="experience section-animate">
+     <section id="experience" class="experience section-animate">
         <div class="container">
             <h2 class="section-title">Professional Experience</h2>
             <div class="timeline">
@@ -127,6 +127,20 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <span class="date">August 2024 - Present </span>
+                        <h3>Coordinator</h3>
+                        <h4>Axios (Tech Club), IIIT Bhopal</h4>
+                        <ul>
+                            <li>Led a team of student developers focused on various club projects and activities.</li>
+                            <li>Organized and conducted numerous technical sessions, workshops, and coding events for students.</li>
+                            <li>Successfully managed the planning and execution of multiple hackathons.</li>
+                            <li>Coordinated event logistics, promotion, speaker invitations, and participant engagement.</li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <span class="date">August 2023 - July 2024</span>
@@ -139,7 +153,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+                </div>
         </div>
     </section>
 
