--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1><span class="typing-animation"></span></h1>
-                <h2>Software Developer | Competitive Programmer<br>App Developer</h2>
-                <p>Passionate about building innovative software solutions and solving complex problems.</p>
+                <h2>Software Developer | Competitive Programmer<br>App Developer | Currently SDE Intern at Agoda</h2>
+                <p>Passionate about building innovative software solutions and solving complex problems. Currently contributing to scalable backend systems at Agoda.</p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
                     <a href="https://drive.google.com/file/d/1KnJ52CGF5szxNgfC-EQHyQ0_hcdl5yP3/view?usp=sharing" target="_blank" class="btn secondary">Download Resume</a>
@@ -49,7 +49,7 @@
                 <div class="about-top-row">
                     <div class="about-text">
                         <p>I'm a Bachelor of Technology student majoring in Information Technology at the Indian Institute of Information Technology, Bhopal. With a strong foundation in Data Structures, Algorithms, and Object-Oriented Programming, I'm passionate about developing innovative solutions.</p>
-                        <p>As an Assistant App Development Lead at Google Developer Student Club and a former Teaching Assistant Intern, I've honed my technical and leadership skills while helping others grow in their coding journey.</p>
+                        <p>Currently working as a Software Development Intern at Agoda, where I contribute to backend development of their Affiliate platform using Scala. As an Assistant App Development Lead at Google Developer Student Club and a former Teaching Assistant Intern, I've honed my technical and leadership skills while helping others grow in their coding journey.</p>
                         <p>I enjoy competitive programming and have achieved high rankings on platforms like LeetCode, CodeChef, and Codeforces.</p>
                     </div>
                     <div class="education">
@@ -115,6 +115,19 @@
         <div class="container">
             <h2 class="section-title">Professional Experience</h2>
             <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <span class="date">June 2025 - Present</span>
+                        <h3>Software Development Intern</h3>
+                        <h4>Agoda</h4>
+                        <ul>
+                            <li>Contributing to backend development of Agoda's Affiliate platform, building scalable systems in Scala to support high-traffic partner integrations</li>
+                            <li>Working on API enhancements and service optimizations to improve performance and reliability for global affiliate operations</li>
+                            <li>Collaborating with cross-functional teams to deliver production-grade code and support real-time data-driven features used by millions of travelers</li>
+                        </ul>
+                    </div>
+                </div>
+
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <span class="date">May 2024 - July 2024</span>
@@ -365,4 +378,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html
