--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Passionate about building innovative software solutions and solving complex problems. Currently contributing to scalable backend systems at Agoda.</p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View Projects</a>
-                    <a href="https://drive.google.com/file/d/1KnJ52CGF5szxNgfC-EQHyQ0_hcdl5yP3/view?usp=sharing" target="_blank" class="btn secondary">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/13BO0RGPEFM9ll34CzA-tGTY4DSUPAx5v/view?usp=sharing" target="_blank" class="btn secondary">Resume</a>
                     </div>
             </div>
         </div>
